--- a/docker-compose-traefik.yml
+++ b/docker-compose-traefik.yml
@@ -6,6 +6,7 @@ services:
     command:
       - "--providers.swarm=true"
       - "--providers.swarm.exposedByDefault=false"
+
       - "--entrypoints.web.address=:80"
       - "--entrypoints.websecure.address=:443"
       - "--entrypoints.web.http.redirections.entryPoint.to=websecure"
@@ -17,6 +18,7 @@ services:
       - "--certificatesresolvers.le.acme.storage=/letsencrypt/acme.json"
 
       - "--api.dashboard=true"
+      - "--log.level=INFO"
 
     ports:
       - "80:80"
@@ -31,7 +33,9 @@ services:
         constraints: [node.role == manager]
       labels:
         - "traefik.enable=true"
+
+        # Dashboard HTTPS
         - "traefik.http.routers.dashboard.rule=Host(`traefik.hamsterdeal.ch`)"
         - "traefik.http.routers.dashboard.entrypoints=websecure"
-        - "traefik.http.routers.dashboard.service=api@internal"
         - "traefik.http.routers.dashboard.tls.certresolver=le"
+        - "traefik.http.routers.dashboard.service=api@internal"
