--- a/docker-compose-traefik.yml
+++ b/docker-compose-traefik.yml
@@ -34,8 +34,24 @@ services:
       - /var/lib/traefik/letsencrypt:/letsencrypt
 
     deploy:
+      mode: replicated
+      replicas: 1
       placement:
-        constraints: [node.role == manager]
+          constraints: [node.role == manager]
+
+      endpoint_mode: vip
+
+      ports:
+          - target: 80
+            published: 80
+            protocol: tcp
+            mode: host
+          - target: 443
+            published: 443
+            protocol: tcp
+            mode: host
+
+            
       labels:
         - "traefik.enable=true"
         - "traefik.http.routers.dashboard.rule=Host(`traefik.hamsterdeal.ch`)"
