--- a/docker-compose-traefik.yml
+++ b/docker-compose-traefik.yml
@@ -26,32 +26,22 @@ services:
       - "--log.level=INFO"
 
     ports:
-      - "80:80"
-      - "443:443"
+      - published: 80
+        target: 80
+        protocol: tcp
+        mode: host
+      - published: 443
+        target: 443
+        protocol: tcp
+        mode: host
 
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - /var/lib/traefik/letsencrypt:/letsencrypt
 
     deploy:
-      mode: replicated
-      replicas: 1
       placement:
-          constraints: [node.role == manager]
-
-      endpoint_mode: vip
-
-      ports:
-          - target: 80
-            published: 80
-            protocol: tcp
-            mode: host
-          - target: 443
-            published: 443
-            protocol: tcp
-            mode: host
-
-            
+        constraints: [node.role == manager]
       labels:
         - "traefik.enable=true"
         - "traefik.http.routers.dashboard.rule=Host(`traefik.hamsterdeal.ch`)"
