--- a/docker-compose-traefik.yml
+++ b/docker-compose-traefik.yml
@@ -3,25 +3,22 @@ version: '3.8'
 services:
   traefik:
     image: traefik:v3.1
+
     command:
-      # 🔹 Providers & Docker Swarm integration
       - "--providers.swarm=true"
       - "--providers.swarm.endpoint=unix:///var/run/docker.sock"
       - "--providers.swarm.exposedByDefault=false"
 
-      # 🔹 Entrypoints (HTTP + HTTPS)
       - "--entrypoints.web.address=:80"
       - "--entrypoints.web.http.redirections.entryPoint.to=websecure"
       - "--entrypoints.web.http.redirections.entryPoint.scheme=https"
       - "--entrypoints.websecure.address=:443"
 
-      # 🔹 Let's Encrypt (HTTPS automatique)
       - "--certificatesresolvers.le.acme.httpchallenge=true"
       - "--certificatesresolvers.le.acme.httpchallenge.entrypoint=web"
       - "--certificatesresolvers.le.acme.email=contact@hamsterdeal.ch"
       - "--certificatesresolvers.le.acme.storage=/letsencrypt/acme.json"
 
-      # 🔹 Dashboard Traefik (facultatif)
       - "--api.dashboard=true"
       - "--log.level=INFO"
 
@@ -39,6 +36,11 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - /var/lib/traefik/letsencrypt:/letsencrypt
 
+    networks:
+      - traefik
+      # IMPORTANT : pour router vers ton app, traefik doit être dans le même réseau overlay
+      - annonces
+
     deploy:
       placement:
         constraints: [node.role == manager]
@@ -48,7 +50,13 @@ services:
         - "traefik.http.routers.dashboard.entrypoints=websecure"
         - "traefik.http.routers.dashboard.service=api@internal"
         - "traefik.http.routers.dashboard.tls.certresolver=le"
-  
+
+networks:
+  traefik:
+    driver: overlay
+
+  annonces:
+    external: true     # ce réseau existe déjà car créé par ton autre stack
+
 volumes:
-  mongo_data:
   traefik_letsencrypt:
