--- a/docker-compose-traefik.yml
+++ b/docker-compose-traefik.yml
@@ -23,9 +23,14 @@ services:
       - "--log.level=INFO"
 
     ports:
-      - "80:80"
-      - "443:443"
-
+      - published: 80
+        target: 80
+        protocol: tcp
+        mode: host
+      - published: 443
+        target: 443
+        protocol: tcp
+        mode: host
 
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
