--- a/docker-compose-traefik.yml
+++ b/docker-compose-traefik.yml
@@ -46,6 +46,15 @@ services:
         - "traefik.http.routers.dashboard.service=api@internal"
         - "traefik.http.routers.dashboard.tls.certresolver=le"
 
+                # 🚀 Redirection www -> non-www (optionnelle)
+        - "traefik.http.middlewares.www-redirect.redirectregex.regex=^https?://www\\.(.*)"
+        - "traefik.http.middlewares.www-redirect.redirectregex.replacement=https://$$1"
+        - "traefik.http.middlewares.www-redirect.redirectregex.permanent=true"
+        - "traefik.http.routers.annonces.middlewares=www-redirect"
+
+        # ⚙️ Port interne du conteneur
+        - "traefik.http.services.annonces.loadbalancer.server.port=8080"
+
 networks:
   traefik:
     driver: overlay
