--- a/docker-compose-traefik.yml
+++ b/docker-compose-traefik.yml
@@ -43,11 +43,12 @@ services:
         constraints:
           - node.role == manager
       labels:
-        - "traefik.enable=false"
+        - "traefik.enable=true"
         - "traefik.http.routers.dashboard.rule=Host(`traefik.hamsterdeal.ch`)"
         - "traefik.http.routers.dashboard.entrypoints=websecure"
         - "traefik.http.routers.dashboard.service=api@internal"
         - "traefik.http.routers.dashboard.tls.certresolver=le"
+        - "traefik.http.services.annonces.loadbalancer.server.port=8080"
 
 networks:
   traefik:
